<?php

namespace App\Enums;

enum BoardMap: string
{
    case CUEVA = 'cueva.webp';
    case ENTRADA = 'entrada.jpeg';
    case MANSION = 'mansion.webp';
}
