<?php

namespace App\Enums;

enum CharacterClass: string
{
    case GUERRERO = 'guerrero';
    case MAGO = 'mago';
    case PICARO = 'picaro';
    case CLERIGO = 'clerigo';
    case PALADIN = 'paladin';
    case EXPLORADOR = 'explorador';
    case BARDO = 'bardo';
    case DRUIDA = 'druida';
    case BARBARO = 'barbaro';
    case MONJE = 'monje';
    case HECHICERO = 'hechicero';
}
